# MarkWareVCMake

./: .gitattributes  .gitignore  .python-version  CMakeConfigure.sh  CMakeController  CMakeController.sh  CMakeController.sh.deprecated  CMakeLists.txt  CMakeUserPresets.json  LICENSE  ProjectRenamer.sh  README.md  SolutionController.py  SolutionController.sh  SolutionController.sh.disabled  SolutionRenamer.py  SolutionUpgrade.py  SolutionUpgrader.py  TemplateRenamer.sh  aarch64.cmake  conanfile.py  conanfile.txt  third_party.txt
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  install.yml  install.yml.disabled  library-c-cpp.yml  macos.yml  macos.yml.disabled  standalone-c-cpp.yml  ubuntu-latest.yml  ubuntu.yml  windows.yml  windows.yml.disabled
.init/: .clang-format-llvm  .clang-format-webkit  ArchInstaller.sh  DebianBasedInstaller.sh  DevToolsInst.py  FedoraInstaller.sh  OpenSUSEInstaller.sh  PyEnvInst.sh  PyEnvInstWin.ps1  WindowsInstaller.ps1  install.sh
.init/installers/: DebianBasedInstaller.sh  FedoraInstaller.sh  WindowsInstaller.ps1
Include/MWVCLib/: MWVCLib.hpp
Include/VCMLib/: VCMLib.hpp
MarkWareUtilities/CMakeToolChains/: X86_64-w64-mingw32.cmake
Source/: MWVCLib.cpp  VCMLib.cpp
Standalone/: CMakeLists.txt  LICENSE
Standalone/Source/: Main.cpp  main.cpp
Utilities/: AboutThisFolder.md
Utilities/CMakeToolChains/: x86_64-w64-mingw32.cmake
Utilities/ConanProfiles/: aarch64-linux-gnu  default  default.debian.12.8  default.kubuntu.24.04.1  x86_64-bookworm-linux-gnu  x86_64-w64-mingw32
assets/: IAmAsset.txt
cmake/: CPM.cmake  Dependencies.cmake  OpenSSLConfig.cmake  ccache.cmake  hardening.cmake  mw-assets.cmake  mw-ipo.cmake  sanitizer-targets.cmake  tools.cmake
include/: Logger.hpp
include/VCMLib/: VCMLib.hpp
source/: VCMLib.cpp
src/: VCMLib.cpp
src/Logger/: Logger.hpp
standalone/: CMakeLists.txt
standalone/source/: Main.cpp
standalone/src/: Main.cpp  SanitizerTest.hpp  Utils.hpp
